# O365-django-mail

./: .flake8  README.md  pyproject.toml
o365-django-mail/: __init__.py  backends.py
o365-django-mail/tests/: test_o365_email_backend.py
